sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:16: error: not found: value i
    i=0
    ^AlgCombSort:18: error: not found: value i
    while(i+ecart < getNombreValeurs())
          ^AlgCombSort:20: error: not found: value PlusPetitQue
      if(PlusPetitQue(i,i+ecart))
         ^AlgCombSort:20: error: not found: value i
      if(PlusPetitQue(i,i+ecart))
                      ^AlgCombSort:20: error: not found: value i
      if(PlusPetitQue(i,i+ecart))
                        ^AlgCombSort:22: error: not found: value i
        echange(i,i+ecart)
                ^AlgCombSort:22: error: not found: value i
        echange(i,i+ecart)
                  ^AlgCombSort:26: error: not found: value i
      i=i+1
      ^